--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,8 @@ services:
     ports:
     - "5000:5000"
     environment:
-      - FLASK_APP=/app/app.py
+      - FLASK_APP=/app/__init__.py
+      - FLASK_ENV=development
 
   python_cache:
     image:  tiangolo/uwsgi-nginx-flask:python3.7-alpine3.7
